Minor tweaks and fixed to themes (#399)
* Fix theme svg:s being too high

* Fix theme errors/warnings

* Make sure firecrawl canvas is at least the size of export dpr

--- a/app/(navigation)/(code)/components/ThemeControl.module.css
+++ b/app/(navigation)/(code)/components/ThemeControl.module.css
@@ -10,6 +10,7 @@
 .logo {
   width: 14px;
   height: auto;
+  max-height: 14px;
   color: white;
 }
 
